# govee-artnet-console

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: build-deb.yml  python-app.yml
docs/: INSTALLATION.md  USAGE.md
packaging/debian-scripts/: postrm
src/artnet_lan_console/shell/: core.py
src/dmx_lan_console/: __init__.py  __main__.py  cli.py  client.py  config.py
src/dmx_lan_console/shell/: __init__.py  autocomplete_config.py  controllers.py  core.py  help_formatter.py  keybindings.py  layout_builder.py  shell_utils.py  toolbar.py  ui_components.py
src/dmx_lan_console/shell/command_handlers/: __init__.py  devices.py  mappings.py  monitoring.py
src/govee_artnet_console/: cli.py
src/govee_artnet_console/shell/: autocomplete_config.py  controllers.py  core.py  keybindings.py  layout_builder.py  toolbar.py  ui_components.py
src/govee_artnet_console/shell/command_handlers/: config.py  mappings.py  monitoring.py
tests/: __init__.py  mock_server.py  test_client.py  test_dashboard_smoke.py
