[tool.poetry]
name = "govee-artnet-console"
version = "0.1.0"
description = "Interactive CLI console for managing Govee ArtNet LAN Bridge"
authors = ["mccartyp <mccartyp@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "govee_artnet_console", from = "src"}]
repository = "https://github.com/mccartyp/govee-artnet-console"
keywords = ["govee", "artnet", "dmx", "lighting", "console", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.10"
httpx = ">=0.27.0"
websockets = ">=12.0"
pyyaml = ">=6.0.0"
rich = ">=13.0.0"
prompt-toolkit = ">=3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0"
pytest-asyncio = ">=0.23.0"
pytest-httpx = ">=0.30.0"
black = ">=24.0.0"
ruff = ">=0.3.0"
mypy = ">=1.8.0"
types-pyyaml = ">=6.0.0"

[tool.poetry.scripts]
govee-artnet-console = "govee_artnet_console.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning:websockets.*:",
]
